# sbom-server

./: Cargo.toml  README.md  known-good-pcr0s.txt
.cargo/: config.toml
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/workflows/: build.yaml  ci.yaml  release.yaml  sbom.yaml  upload-sbom.yaml
docs/spec/: attested-sbom.md  builder.md  hardened-builder.md
src/: in_toto.rs  lib.rs  main.rs  nsm.rs  util.rs
